# lcfg-core

./: CMakeLists.txt  ChangeLog  Doxyfile.in  README  README.md  TODO  TODO.md  lcfg-core.spec  lcfg.yml  mainpage.md  specfile  translaterpmcfg.c.cin
bdb/: CMakeLists.txt  read.c  write.c
common/: CMakeLists.txt
common/context/: context.c  parser.y  tools.c
common/context/ex/: setctx.c
common/derivation/: derivation.c  list.c  map.c
context/: CMakeLists.txt  context.c  ctxlexer.l  ctxlist.c  ctxparser.y  lexer.h  lexer.l  list.c  parser.h  parser.y  scanner.c  setctx.c  tools.c
debian/: changelog  control  copyright  lcfg-core-dev.install  lcfg-core-doc.docs  lcfg-core.install  lcfg-core.triggers  rules
derivation/: derivation.c  list.c
docs/: c-programmers-guide.tex  lcfgpackageiterator.pod.cin  lcfgpackagelib.pod.cin  lcfgpackagelist.pod.cin  lcfgpackagespec.pod.cin  lcfgresource.pod.cin  parse_pkgspec.pod.cin
include/: bdb.h  common.h  components.h  context.h  derivation.h  differences.h  packages.h  profile.h  resources.h  tags.h  templates.h  utils.h.cin  utils.h.in  xml.h
pc/: CMakeLists.txt  lcfg-bdb.pc.cin  lcfg-bdb.pc.in  lcfg-common.pc.in  lcfg-context.pc.in  lcfg-packages.pc.in  lcfg-profile.pc.cin  lcfg-profile.pc.in  lcfg-resources.pc.cin  lcfg-resources.pc.in  lcfg-utils.pc.in  lcfg-xml.pc.in
profile/: CMakeLists.txt  diff.c  profile.c
resources/: CMakeLists.txt  complist.c  component.c  components.c  diff.c  iterator.c  mutate.c  resource.c  resources.c  tag.c  tagiter.c  taglist.c  tags.c  templates.c
resources/components/: component.c  diff.c  iterator.c  list.c  reslist.c  reslist.h  set.c
resources/ex/: qxprof.c  status_dir.c  status_file.c
resources/tags/: iterator.c  list.c  tag.c
utils/: CMakeLists.txt  daemon.c  dnsdomainname.cin  entities.c  lcfgack.c  lcfgmsg.c  lcfgmsg.pod.cin  lcfgutils.pod.cin  libmsg.c  md5.c  setsid.c  shiftpressed.c  shiftpressed.pod.cin  slist.c  utils.c
xml/: CMakeLists.txt  common.c  components.c  lcfg_xml_reader.c  packages.c  read.c  resource.c
